oregon api done

--- a/post_to_states/test.html
+++ b/post_to_states/test.html
@@ -1,3 +1,40 @@
-<html><head><title>Object moved</title></head><body>
-<h2>Object moved to <a href="https://azbodprod.glsuite.us/GLSuiteWeb/Clients/AZBOD/public/WebVerificationSearch.aspx">here</a>.</h2>
-</body></html>
+<head>
+<title>Search Results</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" href="style.css" type="text/css">
+</head>
+
+<body bgcolor="#FFFFFF" text="#000000">
+<a href='http://egov.oregon.gov/Dentistry'><H3 style='font-family: Verdana, Arial, Helvetica, sans-serif;' align='center'>Oregon Board of Dentistry</H3></a>
+<table width="600" border="0" cellspacing="0" cellpadding="3" align="center" class="bodytext">
+  <tr> 
+    <td height="33" class="smallerbody"> 
+      <div align="center">
+        <table border="0" cellpadding="0" cellspacing="0" width="500">
+          <!-- fwtable fwsrc="nav.png" fwbase="nav.gif" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
+          <tr> 
+            <td width="61"><img src="graphics/spacer.gif" width="61" height="1" border="0"></td>
+            <td width="89"><img src="graphics/spacer.gif" width="61" height="1" border="0"></td>
+            <td width="350"><img src="graphics/spacer.gif" width="378" height="1" border="0"></td>
+            <td width="1"><img src="graphics/spacer.gif" width="1" height="1" border="0"></td>
+          </tr>
+        </table>  <table width="447" border="0" cellspacing="0" cellpadding="0" height="17">
+          <tr>
+
+            <td width="64"><a href="index.asp"><img name="nav_r1_c1" src="graphics/newsearch.gif" width="61" height="40" border="0"></a></td>
+            	<td width='88'><a href='searchdir.asp?searchby=licno&searchfor=D6467'></a></td>
+            <td width="92"><img src="graphics/search1.gif" width="95" height="40"></td>
+            <td width="203"><img name="nav_r1_c3" src="graphics/licdetail.gif" width="378" height="40" border="0"></td>
+          </tr>
+        </table>
+      </div>
+    </td>
+  </tr>
+  <tr valign="top"> 
+    <td><BR>
+      <TABLE ALIGN='center'class='bodytext' border='0' padding='5px'<tr valign='top'><tr valign='Top'><td><b>Name:</b></td><td>JOHN N ALLEN D.M.D.</td></tr><tr valign='Top'><td><b>License Type:</b></td><td>Dentist</td></tr><tr valign='Top'><td><b>License #:</b></td><td>D6467</td></tr><tr valign='Top'><td><b>Initial License Date:</b></td><td>1/6/1988</td></tr><tr valign='Top'><td><b>License Status:</b></td><td>Active</td></tr><tr valign='Top'><td><b>Current License Expires:</b></td><td>3/31/2022</td></tr><tr valign='Top'><td><b>Business Address:</b></td><td>1900 SE MCLOUGHLIN BLVD # 68<br/>OREGON CITY OR 97045</td></tr><tr valign='Top'><td><b>Permits and Endorsements:</b></td><td>Nitrous Oxide</td></tr><tr valign='Top'><td><b>Board Action:</b></td><td>There has been no discipline on this license.</td></tr><tr valign='Top'><td><b>Malpractice Action:</b></td><td>There has been no reported malpractice on this license<br/>pursuant to ORS 742.400, effective July 17, 2007.</td></tr></table><BR><BR>This information was last updated 7/8/2020<BR>For More Information, contact this office via phone at (971) 673-3200, fax at (971) 673-3202 or e-mail <a href="mailto:information@oregondentistry.org">information@oregondentistry.org</a><BR>
+    </td>
+  </tr>
+</table>
+</body>
+</html>
