--- a/post_to_states/test.html
+++ b/post_to_states/test.html
@@ -1,40 +1,171 @@
+
+
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Search Results</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" href="style.css" type="text/css">
+<title>License Verification - Kansas Dental Board</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=10"/>
+		<meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style></style>
+        <link rel="stylesheet" href="https://media.ink.org/shared-app-content/css/universal.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="https://media.ink.org/kdb/verification/css/print.css" media="print" />
+        <link rel="stylesheet" href="https://media.ink.org/kdb/verification/css/app.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="https://media.ink.org/kdb/verification/css/kdb-bs4.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="https://media.ink.org/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://media.ink.org/media/fontawesome/5.0.4/js/fontawesome-all.min.js"></script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PRC3VSC');</script>
+    <!-- End Google Tag Manager -->
 </head>
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRC3VSC" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-<body bgcolor="#FFFFFF" text="#000000">
-<a href='http://egov.oregon.gov/Dentistry'><H3 style='font-family: Verdana, Arial, Helvetica, sans-serif;' align='center'>Oregon Board of Dentistry</H3></a>
-<table width="600" border="0" cellspacing="0" cellpadding="3" align="center" class="bodytext">
-  <tr> 
-    <td height="33" class="smallerbody"> 
-      <div align="center">
-        <table border="0" cellpadding="0" cellspacing="0" width="500">
-          <!-- fwtable fwsrc="nav.png" fwbase="nav.gif" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
-          <tr> 
-            <td width="61"><img src="graphics/spacer.gif" width="61" height="1" border="0"></td>
-            <td width="89"><img src="graphics/spacer.gif" width="61" height="1" border="0"></td>
-            <td width="350"><img src="graphics/spacer.gif" width="378" height="1" border="0"></td>
-            <td width="1"><img src="graphics/spacer.gif" width="1" height="1" border="0"></td>
-          </tr>
-        </table>  <table width="447" border="0" cellspacing="0" cellpadding="0" height="17">
-          <tr>
+<div class="header-1 d-block d-sm-block d-xs-block d-md-none d-xl-none">
+    <a class="brand" href="https://www.kansas.gov/dental-verification/index.do" >Kansas Dental Board License Verification</a>
+</div>
+<div class="header-1 d-none d-sm-none d-xs-none d-md-block d-xl-block">
+    <ul class="nav container">
+        <li><a class=" mx-3" href="http://www.kansas.gov"> Kansas.gov </a> </li>
+        <li><a class=" mx-3" href="http://www.da.ks.gov/phonebook/"> State Phone Directory </a> </li>
+        <li><a class=" mx-3" href="http://www.kansas.gov/services/"> Online Services </a> </li>
+    </ul>
+</div>
+        <div class="container" id="global-content">
+            <div>
+                <div class="d-none d-sm-none d-xs-none d-md-block d-lg-block d-lx-block">
+                    <h1><a id="agency-banner"></a></h1>
+                </div>
+                <nav class="ks-blue navbar navbar-expand-lg ">
+                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
+                        <span class="navbar-toggler-icon navbar-inverse my-2 my-sm-0"><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse navbar-collapse flex flex-row-reverse collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active" href="index.jsp">Home </a>
+                            <a class="nav-item nav-link" href="contact.jsp">Contact Information</a>
+                            <a class="nav-item nav-link" href="faq.jsp">Helpful Hints</a>
+                            <a class="nav-item nav-link" href="http://www.kansas.gov/portal-policies/privacy-statement/">Privacy Statement</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+	        
 
-            <td width="64"><a href="index.asp"><img name="nav_r1_c1" src="graphics/newsearch.gif" width="61" height="40" border="0"></a></td>
-            	<td width='88'><a href='searchdir.asp?searchby=licno&searchfor=D6467'></a></td>
-            <td width="92"><img src="graphics/search1.gif" width="95" height="40"></td>
-            <td width="203"><img name="nav_r1_c3" src="graphics/licdetail.gif" width="378" height="40" border="0"></td>
-          </tr>
-        </table>
-      </div>
-    </td>
-  </tr>
-  <tr valign="top"> 
-    <td><BR>
-      <TABLE ALIGN='center'class='bodytext' border='0' padding='5px'<tr valign='top'><tr valign='Top'><td><b>Name:</b></td><td>JOHN N ALLEN D.M.D.</td></tr><tr valign='Top'><td><b>License Type:</b></td><td>Dentist</td></tr><tr valign='Top'><td><b>License #:</b></td><td>D6467</td></tr><tr valign='Top'><td><b>Initial License Date:</b></td><td>1/6/1988</td></tr><tr valign='Top'><td><b>License Status:</b></td><td>Active</td></tr><tr valign='Top'><td><b>Current License Expires:</b></td><td>3/31/2022</td></tr><tr valign='Top'><td><b>Business Address:</b></td><td>1900 SE MCLOUGHLIN BLVD # 68<br/>OREGON CITY OR 97045</td></tr><tr valign='Top'><td><b>Permits and Endorsements:</b></td><td>Nitrous Oxide</td></tr><tr valign='Top'><td><b>Board Action:</b></td><td>There has been no discipline on this license.</td></tr><tr valign='Top'><td><b>Malpractice Action:</b></td><td>There has been no reported malpractice on this license<br/>pursuant to ORS 742.400, effective July 17, 2007.</td></tr></table><BR><BR>This information was last updated 7/8/2020<BR>For More Information, contact this office via phone at (971) 673-3200, fax at (971) 673-3202 or e-mail <a href="mailto:information@oregondentistry.org">information@oregondentistry.org</a><BR>
-    </td>
-  </tr>
+
+
+
+<h2>Licensee Information</h2>
+
+<p class="alert alert-info">Note: Board actions are public records. Actions since 2005 are
+		posted on our website. To view these actions, visit <a href="http://www.dental.ks.gov">KDB website</a> and
+		select the links under the &quot;Discipline&quot; column.</p>
+		
+		
+<table class="table table-bordered table-condensed">
+	<tr>
+		<td class="license">License Number:</td>
+		<td class="number">60657
+		</td>
+	</tr>
+	<tr>
+		<td>First Name:</td>
+		<td>Adam</td>
+	</tr>
+	<tr>
+		<td>Middle Initial:</td>
+		<td>R</td>
+	</tr>
+	<tr>
+		<td>Last Name:</td>
+		<td>Bowen</td>
+	</tr>
+	<tr>
+		<td>Designation:</td>
+		<td>DDS</td>
+	</tr>
+	<tr>
+		<td>Anesthesia Permit:</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>Practice Type:</td>
+		<td>GE- General</td>
+	</tr>
+	<tr>
+		<td>Extended Care Permit:</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>Issue Date:</td>
+		<td>24-MAY-10</td>
+	</tr>
+	<tr>
+		<td>Year Expire:</td>
+		<td>2021</td>
+	</tr>
+	<tr>
+		<td colspan="2">(The expiration date of all licenses is December
+		1 <sup>st</sup> of the year displayed.)</td>
+	</tr>
+	<tr>
+		<td>License Status:</td>
+		<td>Active</td>
+	</tr>
+	<tr>
+		<td>Board Action:</td>
+		<td>No</td>
+	</tr>
+	
+	
 </table>
+
+
+<form name="indexForm" method="post" action="/dental-verification/start.do">
+		<div class="form-actions hidden-phone d-none d-xs-none d-sm-none d-md-block d-lg-block">
+							<button type="submit" value="Continue" class="btn btn-success"  name="_eventId_submit">						
+								<i class="icon-white icon-search"></i> Search Again</button>
+							<button type="submit" name="_eventId_Print" value="Print" onclick="window.print();return false;" class="btn btn-warning" > <i class="icon-white icon-print"></i> Print</button>	
+						</div>
+
+
+						<div class="hidden-tablet hidden-desktop d-xs-block d-sm-block d-md-none d-lg-none">
+							<button type="submit" value="Continue" class="btn btn-success btn-large btn-block"  name="_eventId_submit">
+								<i class="icon-white icon-search"></i> Search Again</button>
+							<button type="submit" name="_eventId_Print" value="Print" onclick="window.print();return false;" class="btn btn-warning btn-large btn-block" > <i class="icon-white icon-print"></i> Print</button>	
+						</div>
+		
+			
+		</form>
+		
+                    <hr>
+            <div id="agency-footer">
+    		<p>&copy; 2020 <a title="Kansas Dental Board" href="http://www.dental.ks.gov/">Kansas Dental Board</a> | <a href="http://ksgovernment.feedbacksurvey.sgizmo.com/?website=KDBDentalVerification">Feedback</a></p>
+            </div>
+
+        </div>
+
+<footer class="footer">
+    <ul class="nav">
+        <li><a href="http://www.kansas.gov/portal-policies/">Portal Policies</a></li>
+        <li><a href="http://www.kansas.gov/help-center/">Help Center</a></li>
+        <li><a href="http://www.kansas.gov/help-center/contact-us">Contact Us</a></li>
+        <li><a href="http://www.kansas.gov/about/">About Us</a></li>
+        <li><a href="http://www.kansas.gov/sitemap/">Site Map</a></li>
+    </ul>
+</footer>
+
+<script src="https://media.ink.org/shared-app-content/includes/footer.js"></script>
+<script src="https://media.ink.org/jquery/jquery-3.4.1.min.js"></script>
+<script src="https://media.ink.org/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
